# portfolio

backend/: .env.example  .gitignore  pyproject.toml  railway.json  requests.http  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_skill.py  0003_alter_skill_options_remove_skill_category.py
backend/api/templates/: gloria.html
backend/backend/: settings.py  urls.py
backend/staticfiles/: index.html
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Contact.tsx  Education.tsx  Footer.tsx  Hero.tsx  ProjectDetail.tsx  Projects.tsx  Skills.tsx  TerminalHeader.tsx
